--- a/index.html
+++ b/index.html
@@ -1,408 +1,251 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Página de Mateo 6-2</title>
-  <style>
-    /* ================== Base / Matrix / Layout ================== */
-    body {
-      margin: 0;
-      height: 100vh;
-      background: black;
-      color: #00ff00;
-      font-family: 'Courier New', Courier, monospace;
-      overflow: hidden;
-    }
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Página — Fondo Pirámide</title>
 
-    /* Canvas Matrix */
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
+<!-- Fuente -->
+<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
-    /* Contenedor principal */
-    .container {
-      display: none; /* Oculto hasta que termine la carga */
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      padding: 20px;
-    }
+<style>
+:root{
+  --amber-500: #f59e0b;
+  --amber-400: #fbbf24;
+  --amber-600: #d97706;
+}
 
-    /* Texto animado estilo hacker */
-    .typing-text {
-      font-size: clamp(1.2rem, 4vw, 2.5rem);
-      color: #00ff00;
-      text-shadow: 0 0 5px #00ff00, 0 0 15px #00ff00, 0 0 30px #00ff00;
-      border-right: 2px solid #00ff00;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 0;
-      animation: typing 4s steps(30, end) infinite alternate,
-                 blink 0.7s infinite;
-    }
+/* ====== Fondo pirámide 3D ====== */
+body, html {
+  margin:0; padding:0;
+  width:100%; height:100%;
+  font-family: 'Share Tech Mono', monospace;
+  background:#000;
+  overflow:hidden;
+  display:flex; align-items:center; justify-content:center;
+  perspective: 1000px;
+}
 
-    @keyframes typing { from { width: 0; } to { width: 25ch; } }
-    @keyframes blink { 50% { border-color: transparent; } }
+.pyramid-container {
+  position: fixed;
+  inset:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  transform-style: preserve-3d;
+  z-index:-1;
+}
 
-    /* ================== BOTÓN ================== */
-    .download-btn {
-      margin-top: 30px;
-    }
+.pyramid {
+  width:200px;
+  height:200px;
+  transform-style: preserve-3d;
+  animation: rotate 12s linear infinite;
+  position:relative;
+}
 
-    .download-btn button {
-      width: 165px;
-      height: 62px;
-      cursor: pointer;
-      color: #fff;
-      font-size: 17px;
-      border-radius: 1rem;
-      border: none;
-      position: relative;
-      background: #100720;
-      transition: 0.3s;
-      box-shadow: 0 0 10px rgba(255, 94, 247, 0.6);
-    }
+.pyramid-face {
+  position:absolute;
+  width:100%;
+  height:100%;
+  background: linear-gradient(to top, var(--amber-500), var(--amber-400));
+  border: 1px solid rgba(255,255,255,0.05);
+  transform-origin: center bottom;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
 
-    .download-btn button::after {
-      content: '';
-      width: 100%;
-      height: 100%;
-      background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      filter: blur(20px);
-      z-index: -1;
-      position: absolute;
-      left: 0;
-      top: 0;
-      opacity: 0.8;
-      border-radius: 1rem;
-      transition: 0.3s;
-    }
+/* cuatro caras */
+.pyramid-face:nth-child(1){ transform: rotateY(0deg) translateZ(100px) rotateX(0deg);}
+.pyramid-face:nth-child(2){ transform: rotateY(90deg) translateZ(100px);}
+.pyramid-face:nth-child(3){ transform: rotateY(180deg) translateZ(100px);}
+.pyramid-face:nth-child(4){ transform: rotateY(270deg) translateZ(100px);}
 
-    .download-btn button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(2,245,255,0.9), 0 0 30px rgba(255,94,247,0.9);
-    }
+@keyframes rotate {
+  0%{ transform: rotateY(0deg) rotateX(-10deg); }
+  100%{ transform: rotateY(360deg) rotateX(-10deg); }
+}
 
-    .download-btn button:active {
-      transform: scale(0.9) rotate(3deg);
-      background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      transition: 0.2s;
-    }
+/* ====== Loader overlay ====== */
+#loader{
+  position: fixed;
+  inset:0;
+  background: rgba(0,0,0,0.85);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  z-index: 9999;
+  color:#00ff00;
+  gap:14px;
+}
 
-    /* ================== PANTALLA DE CARGA ================== */
-    #loader {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 9999;
-      color: #00ff00;
-      font-size: 1.5rem;
-    }
+.spinner{
+  width:44px;
+  height:44px;
+  animation: spinner-y 2s infinite ease;
+  transform-style:preserve-3d;
+  margin-top:6px;
+}
+.spinner>div{
+  background-color: rgba(0,77,255,0.18);
+  height:100%;
+  position:absolute;
+  width:100%;
+  border:2px solid #004dff;
+  box-sizing:border-box;
+  border-radius:4px;
+}
+.spinner div:nth-of-type(1){ transform: translateZ(-22px) rotateY(180deg); }
+.spinner div:nth-of-type(2){ transform: rotateY(-270deg) translateX(50%); transform-origin: top right; }
+.spinner div:nth-of-type(3){ transform: rotateY(270deg) translateX(-50%); transform-origin: center left; }
+.spinner div:nth-of-type(4){ transform: rotateX(90deg) translateY(-50%); transform-origin: top center; }
+.spinner div:nth-of-type(5){ transform: rotateX(-90deg) translateY(50%); transform-origin: bottom center; }
+.spinner div:nth-of-type(6){ transform: translateZ(22px); }
+@keyframes spinner-y { 0%{ transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);} 50%{ transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);} 100%{ transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);} }
 
-    /* ================= MANO / DEDOS (ESTRECHA, tamaño parecido a la pirámide) ================= */
-    .hand-loader {
-      --skin-color: #E4C560;
-      --tap-speed: 0.6s;
-      --tap-stagger: 0.09s;
-      position: relative;
-      width: 110px;   /* ancho del conjunto (más cercano a la pirámide) */
-      height: 80px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 20px;
-    }
+/* ====== Contenido principal ====== */
+.container {
+  display: none; /* visible tras carga */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height:100vh;
+  text-align:center;
+  padding:20px;
+  z-index:10;
+  position:relative;
+  gap:18px;
+}
 
-    .hand-loader:before {
-      content: '';
-      position: absolute;
-      width: 120%;
-      height: 22%;
-      bottom: -8%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,0.35);
-      filter: blur(8px);
-      border-radius: 50%;
-      z-index: 0;
-    }
+h1.typing {
+  color: #00ff00;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: clamp(1.8rem, 4vw, 3rem);
+  filter: drop-shadow(0 0 5px currentColor);
+  margin: 0 0 18px 0;
+  white-space: nowrap;
+  position: relative;
+  display: inline-block;
+}
 
-    /* palma y estructura */
-    .🤚 {
-      --skin-color: var(--skin-color);
-      --tap-speed: var(--tap-speed);
-      --tap-stagger: var(--tap-stagger);
-      position: relative;
-      width: 64px;   /* más estrecha */
-      height: 48px;
-      margin: 0 auto;
-      z-index: 2;
-    }
+h1.typing::after{
+  content: '';
+  display: inline-block;
+  width: .2em;
+  height: .7em;
+  background-color: currentColor;
+  margin-left: .12em;
+  animation: blink 1s linear infinite forwards;
+  vertical-align: baseline;
+}
 
-    /* sombra/reflejo (ajustada) */
-    .🤚:before {
-      content: '';
-      display: block;
-      width: 160%;
-      height: 65%;
-      position: absolute;
-      top: 68%;
-      left: -10%;
-      background-color: rgba(0,0,0,0.5);
-      border-radius: 30px 8px;
-      filter: blur(8px);
-      opacity: 0.28;
-      z-index: 0;
-    }
+@keyframes blink {
+  0%,50%{ visibility: visible; }
+  51%,100%{ visibility: hidden; }
+}
 
-    /* muñeca (más estrecha) */
-    .🤚:after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 26%;
-      left: 50%;
-      bottom: -20%;
-      transform: translateX(-50%);
-      background: var(--skin-color);
-      border-radius: 18px;
-      box-shadow: inset 0 -3px rgba(0,0,0,0.06);
-      z-index: 1;
-    }
+/* ====== Tarjeta 3D Descarga ====== */
+.download-area { display:flex; flex-direction:column; align-items:center; gap:14px; z-index:11; }
+.file-wrapper { display:flex; flex-direction:column; align-items:center; justify-content:center; }
+.file {
+  width:240px; height:160px;
+  cursor:pointer; perspective:1500px; position:relative; z-index:50;
+  display:grid; place-items:center;
+}
+.work-5 { width:100%; height:100%; background: var(--amber-600); border-radius:16px; border-top-left-radius:0; transform-origin: top center; transition: box-shadow .25s ease, transform .3s ease; position:relative; }
+.work-5::after{ content:""; position:absolute; bottom:99%; left:0; width:80px; height:16px; background: var(--amber-600); border-top-left-radius:12px; border-top-right-radius:12px; }
+.work-5::before{ content:""; position:absolute; top:-15px; left:75.5px; width:16px; height:16px; background: var(--amber-600); clip-path: polygon(0 35%, 0% 100%, 50% 100%); }
+.work-4, .work-3, .work-2 { position:absolute; inset:8px; border-radius:12px; transition: transform .3s ease; transform-origin: bottom center; pointer-events:none; }
+.work-4{ background:#a8a29e; }
+.work-3{ background:#d1d5db; }
+.work-2{ background:#e5e7eb; }
+.work-1{ position:absolute; bottom:0; width:100%; height:156px; border-radius:16px; border-top-right-radius:0; background: linear-gradient(to top, var(--amber-500), var(--amber-400)); display:flex; align-items:flex-end; transform-origin:bottom center; transition: transform .3s ease, box-shadow .3s ease; box-shadow: inset 0 20px 40px rgba(251,191,36,0.12), inset 0 -20px 40px rgba(217,119,6,0.06); }
+.work-1::after{ content:""; position:absolute; bottom:99%; right:0; width:146px; height:16px; background: var(--amber-400); border-top-left-radius:12px; border-top-right-radius:12px; }
+.work-1::before{ content:""; position:absolute; top:-10px; right:142px; width:16px; height:16px; background: var(--amber-400); clip-path: polygon(100% 14%, 50% 100%, 100% 100%); }
 
-    /* palma */
-    .🌴 {
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: var(--skin-color);
-      border-radius: 8px 34px;
-      z-index: 2;
-    }
+.file:hover .work-4 { transform: rotateX(-20deg); }
+.file:hover .work-3 { transform: rotateX(-30deg); }
+.file:hover .work-2 { transform: rotateX(-38deg); }
+.file:hover .work-1 { transform: rotateX(-46deg) translateY(1px); box-shadow: inset 0 20px 40px #fbbf24, inset 0 -20px 40px #d97706; }
+.file:hover .work-5 { box-shadow: 0 20px 40px rgba(0,0,0,.2); transform: translateZ(4px); }
 
-    /* pulgar (ajustado a la palma estrecha) */
-    .👍 {
-      position: absolute;
-      width: 105%;
-      height: 30px;
-      background-color: var(--skin-color);
-      bottom: 8%;
-      right: -6%;
-      transform-origin: calc(100% - 14px) 16px;
-      transform: rotate(-22deg);
-      border-radius: 28px 18px 18px 8px;
-      border-bottom: 2px solid rgba(0, 0, 0, 0.12);
-      border-left: 2px solid rgba(0, 0, 0, 0.08);
-      z-index: 3;
-    }
+.file-caption { margin-top:.6rem; font-size:1.1rem; color:#fff; opacity:.2; pointer-events:none; }
 
-    .👍:after {
-      width: 20%;
-      height: 60%;
-      content: '';
-      background-color: rgba(255, 255, 255, 0.28);
-      position: absolute;
-      bottom: -6%;
-      left: 5px;
-      border-radius: 60% 10% 10% 30%;
-      border-right: 2px solid rgba(0, 0, 0, 0.05);
-      z-index: 4;
-    }
+.download-btn button{ width:165px; height:62px; cursor:pointer; color:#fff; font-size:17px; border-radius:12px; border:none; background:#100720; transition:.25s; box-shadow:0 0 10px rgba(255,94,247,0.6); }
+.download-btn button:hover{ transform:scale(1.05); box-shadow:0 0 20px rgba(2,245,255,0.9),0 0 30px rgba(255,94,247,0.9); }
 
-    /* dedos (estrechos y más compactos) */
-    .👉 {
-      position: absolute;
-      width: 58%;
-      height: 22px;
-      background-color: var(--skin-color);
-      bottom: 34%;
-      right: 14%;
-      transform-origin: 100% 18px;
-      animation-duration: calc(var(--tap-speed) * 2);
-      animation-timing-function: ease-in-out;
-      animation-iteration-count: infinite;
-      transform: rotate(12deg);
-      border-radius: 14px;
-      z-index: 3;
-    }
-
-    .👉:before {
-      content: '';
-      position: absolute;
-      width: 110%;
-      height: 20px;
-      background-color: var(--skin-color);
-      bottom: 6%;
-      right: 66%;
-      transform-origin: calc(100% - 18px) 18px;
-      transform: rotate(-56deg);
-      border-radius: 18px;
-    }
-
-    /* delays para el efecto cascade */
-    .👉:nth-of-type(1) {
-      animation-delay: 0;
-      filter: brightness(72%);
-      animation-name: tap-upper-1;
-    }
-    .👉:nth-of-type(2) {
-      animation-delay: var(--tap-stagger);
-      filter: brightness(82%);
-      animation-name: tap-upper-2;
-    }
-    .👉:nth-of-type(3) {
-      animation-delay: calc(var(--tap-stagger) * 2);
-      filter: brightness(92%);
-      animation-name: tap-upper-3;
-    }
-    .👉:nth-of-type(4) {
-      animation-delay: calc(var(--tap-stagger) * 3);
-      filter: brightness(100%);
-      animation-name: tap-upper-4;
-    }
-
-    @keyframes tap-upper-1 {
-      0%,50%,100% { transform: rotate(12deg) scale(0.45); }
-      40% { transform: rotate(52deg) scale(0.45); }
-    }
-    @keyframes tap-upper-2 {
-      0%,50%,100% { transform: rotate(12deg) scale(0.62); }
-      40% { transform: rotate(52deg) scale(0.62); }
-    }
-    @keyframes tap-upper-3 {
-      0%,50%,100% { transform: rotate(12deg) scale(0.8); }
-      40% { transform: rotate(52deg) scale(0.8); }
-    }
-    @keyframes tap-upper-4 {
-      0%,50%,100% { transform: rotate(12deg) scale(1); }
-      40% { transform: rotate(52deg) scale(1); }
-    }
-
-    /* versión pequeña para la mano que aparece debajo del botón */
-    .hand-small {
-      transform: scale(0.7);
-      margin-top: 40px;
-    }
-
-  </style>
+@media (max-width:420px){
+  .file{ width:12rem; height:8rem; }
+  .work-1{ height:120px; }
+  h1.typing{ font-size: 2rem; }
+}
+</style>
 </head>
 <body>
-  <!-- Pantalla de carga -->
-  <div id="loader">
-    <div>Cargando sistema...</div>
 
-    <!-- Mano (reemplaza la pirámide en la carga) -->
-    <div class="hand-loader" aria-hidden="true">
-      <div class="🤚">
-        <div class="🌴"></div>
-        <div class="👍"></div>
-        <div class="👉"></div>
-        <div class="👉"></div>
-        <div class="👉"></div>
-        <div class="👉"></div>
-      </div>
-    </div>
+<!-- Fondo pirámide -->
+<div class="pyramid-container">
+  <div class="pyramid">
+    <div class="pyramid-face"></div>
+    <div class="pyramid-face"></div>
+    <div class="pyramid-face"></div>
+    <div class="pyramid-face"></div>
   </div>
+</div>
 
-  <!-- Fondo Matrix -->
-  <canvas id="matrix"></canvas>
+<!-- Loader -->
+<div id="loader">
+  <div>Cargando sistema...</div>
+  <div class="spinner"><div></div><div></div><div></div><div></div><div></div><div></div></div>
+</div>
 
-  <!-- Contenido -->
-  <div class="container">
-    <div class="typing-text">El mejor grupo de la exposición...</div>
+<!-- Contenido -->
+<div class="container">
+  <h1 class="typing">El mejor grupo de la exposición...</h1>
+  <div class="download-area">
+    <div class="file-wrapper">
+      <div class="file" role="button" tabindex="0">
+        <div class="work-5"></div>
+        <div class="work-4"></div>
+        <div class="work-3"></div>
+        <div class="work-2"></div>
+        <div class="work-1"></div>
+      </div>
+      <p class="file-caption">Archivo listo</p>
+    </div>
     <div class="download-btn">
-      <a href="video.mp4" download>
-        <button>Descargar</button>
-      </a>
-    </div>
-
-    <!-- Mano debajo del botón (tamaño reducido) -->
-    <div class="hand-loader hand-small" aria-hidden="true">
-      <div class="🤚">
-        <div class="🌴"></div>
-        <div class="👍"></div>
-        <div class="👉"></div>
-        <div class="👉"></div>
-        <div class="👉"></div>
-        <div class="👉"></div>
-      </div>
+      <a href="video.mp4" download><button>Descargar</button></a>
     </div>
   </div>
+</div>
 
-  <script>
-    // ============= ANIMACIÓN MATRIX =============
-    const canvas = document.getElementById("matrix");
-    const ctx = canvas.getContext("2d");
+<script>
+window.addEventListener('load', () => {
+  const loader = document.getElementById('loader');
+  setTimeout(() => {
+    loader.style.opacity='0';
+    loader.style.transition='opacity .45s ease';
+    setTimeout(()=>{
+      loader.style.display='none';
+      document.querySelector('.container').style.display='flex';
+    },450);
+  },1500);
+});
 
-    function resizeCanvas() {
-      canvas.height = window.innerHeight;
-      canvas.width = window.innerWidth;
-    }
-    resizeCanvas();
+// Focus accesible
+const fileEl = document.querySelector('.file');
+fileEl.addEventListener('focus', ()=>fileEl.classList.add('focused'));
+fileEl.addEventListener('blur', ()=>fileEl.classList.remove('focused'));
 
-    const letters = "01";
-    const fontSize = 16;
-    let columns = Math.floor(canvas.width / fontSize);
-
-    let drops = [];
-    for (let x = 0; x < columns; x++) drops[x] = 1;
-
-    function draw() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      ctx.fillStyle = `hsl(${Math.random() * 360}, 100%, 50%)`;
-      ctx.font = fontSize + "px monospace";
-
-      for (let i = 0; i < drops.length; i++) {
-        const text = letters.charAt(Math.floor(Math.random() * letters.length));
-        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-          drops[i] = 0;
-        }
-        drops[i]++;
-      }
-    }
-
-    let matrixInterval = setInterval(draw, 35);
-
-    // Ajustar canvas en resize
-    window.addEventListener("resize", () => {
-      resizeCanvas();
-      // recalcular columnas y drops
-      columns = Math.floor(canvas.width / fontSize);
-      drops = Array(columns).fill(1);
-    });
-
-    // ============= SISTEMA DE CARGA =============
-    window.addEventListener("load", () => {
-      const loader = document.getElementById("loader");
-      setTimeout(() => {
-        loader.style.opacity = "0";
-        loader.style.transition = "0.5s";
-        setTimeout(() => {
-          loader.style.display = "none";
-          document.querySelector(".container").style.display = "flex";
-        }, 500);
-      }, 3000); // dura 3s la carga
-    });
-  </script>
+const style = document.createElement('style');
+style.textContent = `
+.file.focused .work-4 { transform: rotateX(-20deg); }
+.file.focused .work-3 { transform: rotateX(-30deg); }
+.file.focused .work-2 { transform: rotateX(-38deg); }
+.file.focused .work-1 { transform: rotateX(-46deg) translateY(1px); box-shadow: inset 0 20px 40px #fbbf24, inset 0 -20px 40px #d97706; }
+.file.focused .work-5 { box-shadow: 0 20px 40px rgba(0,0,0,.2); transform: translateZ(4px); }
+`;
+document.head.appendChild(style);
+</script>
 </body>
 </html>
